--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: Dracula Metaverse
-title: null
 theme: jekyll-theme-merlot
+title: Dracula Metaverse
+description: Internal Website For Documentation 
