--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Dracula Metaverse
 theme: jekyll-theme-merlot
 title: Dracula Metaverse
 description: Internal Website For Documentation 
+show_downloads: false
